[gd_scene load_steps=2 format=3 uid="uid://b5n8k2v7x4m9s"]

[ext_resource type="Script" path="res://scripts/core/EnemyHealthBar.gd" id="1_6k9mx"]

[node name="EnemyHealthBar" type="Control"]
script = ExtResource("1_6k9mx")

[node name="Background" type="ColorRect" parent="."]
offset_left = -30.0
offset_top = -4.0
offset_right = 30.0
offset_bottom = 4.0
color = Color(0, 0, 0, 1)

[node name="HealthFill" type="ColorRect" parent="."]
offset_left = -29.0
offset_top = -3.0
offset_right = 29.0
offset_bottom = 3.0
color = Color(0, 1, 0, 1)

[node name="DamageFlash" type="ColorRect" parent="."]
offset_left = -29.0
offset_top = -3.0
offset_right = 29.0
offset_bottom = 3.0
color = Color(1, 0, 0, 1)